--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./index_files/bootstrap.min.css">
     <link rel="stylesheet" href="./index_files/style.css">
-    <!-- <link rel="stylesheet" href="./icon/remixicon.css"> -->
+    <link rel="stylesheet" href="./index_files/remixicon.css">
     <link rel="stylesheet" href="./index_files/aos.css">
-
-    <link rel="stylesheet" href="./index_files/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
 
     <link rel="stylesheet" href="./index_files/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
