--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./index_files/bootstrap.min.css">
     <link rel="stylesheet" href="./index_files/style.css">
-    <link rel="stylesheet" href="./index_files/remixicon.css">
+    <link rel="stylesheet" href="./index_files/icon/remixicon.css">
     <link rel="stylesheet" href="./index_files/aos.css">
 
 
