--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="row g-3">
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-right">
                             <div class="sk-box bx-1">
-                                <div class="icon"><i class="fa-brands fa-html5"></i></div>
+                                <div class="icon"><i class="ri-html5-line"></i></div>
                                 <div class="content">
                                     <h4>HTML</h4>
                                 </div>
@@ -208,7 +208,7 @@
 
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-left">
                             <div class="sk-box bx-2">
-                                <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
+                                <div class="icon"><i class="ri-css3-line"></i></div>
                                 <div class="content">
                                     <h4>CSS</h4>
                                 </div>
@@ -217,7 +217,7 @@
 
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-right" data-aos-duration="1000">
                             <div class="sk-box bx-3">
-                                <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
+                                <div class="icon"><i class="ri-bootstrap-line"></i></div>
                                 <div class="content">
                                     <h4>Bootstrap</h4>
                                 </div>
@@ -226,7 +226,7 @@
 
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-left" data-aos-duration="1000">
                             <div class="sk-box bx-4">
-                                <div class="icon"><i class="fa-brands fa-js"></i></div>
+                                <div class="icon"><i class="ri-javascript-line"></i></div>
                                 <div class="content">
                                     <h4>JavaScript</h4>
                                 </div>
@@ -235,7 +235,7 @@
 
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-right" data-aos-duration="2000">
                             <div class="sk-box bx-5">
-                                <div class="icon"><i class="fa-brands fa-php"></i></div>
+                                <div class="icon"><i class="ri-php-line"></i></div>
                                 <div class="content">
                                     <h4>php</h4>
                                 </div>
@@ -244,7 +244,7 @@
 
                         <div class="col-lg-6 col-md-6 aos-init" data-aos="fade-up-left" data-aos-duration="2000">
                             <div class="sk-box bx-6">
-                                <div class="icon"><i class="fa-brands fa-android"></i></div>
+                                <div class="icon"><i class="ri-android-line"></i></div>
                                 <div class="content">
                                     <h4>Android</h4>
                                 </div>
